# appearance

appearance/: Cargo.toml
appearance/src/: bin.rs  lib.rs  main_loop.rs  timer.rs
appearance/src/graphics/: camera.rs  mod.rs  transform.rs  window.rs
appearance/src/graphics/renderer/: handle_queue.rs  mod.rs
appearance/src/graphics/renderer/raytracer_cpu/: acceleration_structure.rs  bvh.rs  bvhbackup.rs  framebuffer.rs  frustum.rs  mesh.rs  mod.rs  ray.rs  simd_ray.rs
appearance/src/graphics/renderer/raytracer_cpu/acc_structures/: blas.rs  mod.rs  tlas.rs
appearance/src/graphics/renderer/raytracer_cpu/pipeline/: main_pipeline.rs  mod.rs
appearance/src/graphics/renderer/raytracer_cpu/primitives/: aabb.rs  frustum.rs  mod.rs  ray.rs  simd_ray.rs  triangle.rs
appearance/src/input/: mod.rs
appearance/src/resources/: image.rs  mod.rs  model.rs  resource_manager.rs
gl_helper/: Cargo.toml
gl_helper/src/: buffers.rs  imgui_impl.rs  lib.rs  shaders.rs  textures.rs
