[package]
name = "appearance"
authors = ["Jason de Wolff"]
version = "0.0.1"
edition = "2021"

[dependencies]
bitmask-enum = "2.1.0"
rayon = "1.7.0"
stb_image = "0.2.4"
gltf = "1.0.0"
glam = "0.23.0"
gl = "0.14.0"
glutin = "0.29.1"
gl-helper = { path = "../gl_helper" }

[dependencies.uuid]
version = "1.3.4"
features = ["v4"]

[lib]
name = "appearance"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "src/bin.rs"

[profile.dev]                           # Modify profile settings via config.
opt-level = 0                           # Optimization level.
debug = true                            # Include debug info.
debug-assertions = true                 # Enables debug assertions.
overflow-checks = true                  # Enables runtime integer overflow checks.
lto = false                             # Sets link-time optimization.
panic = 'unwind'                        # The panic strategy.
incremental = true                      # Incremental compilation.
codegen-units = 16                      # Number of code generation units.
rpath = false                           # Sets the rpath linking option.

[profile.release]                       # Modify profile settings via config.
opt-level = 3                           # Optimization level.
debug = true                            # Include debug info.
debug-assertions = false                # Enables debug assertions.
overflow-checks = false                 # Enables runtime integer overflow checks.
lto = 'thin'                            # Sets link-time optimization.
panic = 'abort'                         # The panic strategy.
incremental = false                     # Incremental compilation.
codegen-units = 1                       # Number of code generation units.
rpath = false                           # Sets the rpath linking option.